--- a/src/billance/Services.properties
+++ b/src/billance/Services.properties
@@ -31,3 +31,9 @@ heatConsumptionSum=Common consumption (kWh)
 heatFraction=Fraction
 heatGasConsumption=Gas consumption (m3)
 heatGasConsumptionSum=Common gas (m3)
+
+summaryName=Service
+summaryAmount=Amount
+summaryUnit=Unit
+summaryCost=Cost
+summaryUnitPrice=price/unit
