--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.sqlite-jdbc-3.16.1.jar=../sqlite-jdbc-3.16.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.16.1.jar}
+    ${file.reference.sqlite-jdbc-3.16.1.jar}:\
+    ${reference.JSONRPCExample.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +64,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.JSONRPCExample=../JSONRPCExample
+reference.JSONRPCExample.jar=${project.JSONRPCExample}/dist/JSONRPCExample.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
