--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,6 +65,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.JSONRPCExample=../JSONRPCExample
+project.license=mit
 reference.JSONRPCExample.jar=${project.JSONRPCExample}/dist/JSONRPCExample.jar
 run.classpath=\
     ${javac.classpath}:\
